css page styled but time still not working

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <div class="container">
 
                    <div class="headTag">
-                <h1 class="text1"> Train Schedules </h1>
+                <h1 class="text1"> Local Express </h1>
                 <h3 class="text2">Time Table</h3>
-               
+
             </div>
         
  
@@ -45,7 +45,7 @@
                 <!-- Default panel contents -->
                <div class="ph">
 
-              <h3 class="pt">Current Train Schedule</h3>
+              <h3 class="pt"></h3>
               <hr>
               </div>
 
@@ -71,7 +71,7 @@
 <!---panel 3 form for adding trains-------------------------------------------->
 <div class="ppp">
 <div class="ph">
-            <h3 class="ptitle">Add Train</h3>
+            <h3 class="ptitle">Train Search</h3>
             </div>
 
 
